# ElasticFusion

GUI/src/: CMakeLists.txt  Main.cpp  MainController.cpp  MainController.h
GUI/src/Tools/: KinectDKInterface.cpp  KinectDKInterface.hpp  LiveLogReader.cpp  LiveLogReader.h
dk-test/: CMakeLists.txt  main.cpp
